<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings_menu_title"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_firebase_24"
        android:title="@string/firebase"
        app:showAsAction="always|withText" />

    <group android:id="@+id/menu_group"
        android:checkableBehavior="single">
        <item android:id="@+id/menu_item_1" android:title="@string/easiness" android:checkable="false" />
        <item android:id="@+id/menu_item_2" android:title="@string/quality" android:checkable="false" />
        <item android:id="@+id/menu_item_3" android:title="@string/decks_nav_menu_title" android:checkable="false" />
    </group>



</menu>