<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="card"
            type="es.uam.eps.dadm.myapplication.Card" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        tools:ignore="MissingDefaultResource">



        <LinearLayout
            android:id="@+id/edit_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/card_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="top"
                android:gravity="center_horizontal"
                android:paddingTop="50dp"
                android:paddingBottom="30dp"
                android:text="@{card.date.toString().substring(0,10)}"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Date" />
            <TextView
                android:id="@+id/question_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/question"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Question" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_question_hint"
                android:layout_marginHorizontal="50dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/question_edit_text"
                    android:text="@{card.question}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/answer_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/answer"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Answer" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_answer_hint"
                android:layout_marginHorizontal="50dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/answer_edit_text"
                    android:text="@{card.answer}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/opt_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/opt"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Answer" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/opt_text_hint"
                android:layout_marginHorizontal="50dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/opt_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
            android:paddingTop="10dp"
                android:paddingRight="25dp"
            android:id="@+id/selector_id_deck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_card"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded">
            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deck_selector"
                android:textSize = "20dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingEnd="30dp"
                android:layout_centerHorizontal="true"
                android:layout_alignBottom="@id/txtView"/>
            </LinearLayout>
            <LinearLayout
                android:paddingTop="10dp"
                android:id="@+id/optLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_card"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_option"
                    android:textSize = "20dp" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingEnd="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignBottom="@id/txtView"/>
            </LinearLayout>
        </LinearLayout>
            <LinearLayout
                android:paddingTop="10dp"
                android:id="@+id/buttoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_card"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded">

                <Button
                    android:id="@+id/accept_edit_buttom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept_card_edit_button_title" />

                <Button
                    android:id="@+id/cancel_edit_buttom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_card_edit_button_title" />
                <Button
                    android:id="@+id/remove_edit_buttom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_button_title" />
            </LinearLayout>
            <Button
                android:id="@+id/opt_buttom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_opt_text" />
        </LinearLayout>




    </RelativeLayout>
</layout>
