<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/selector_id_deck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
        <TextView
            android:id="@+id/cards_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tutorial_nav_menu_title"
            android:textSize="30sp"
            android:textStyle="bold"/>
            <TextView
                android:paddingTop="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:id="@+id/aboutString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/info_tutorial"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Button
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:id="@+id/debug_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debug_button" />
        </LinearLayout>

    </RelativeLayout>
    </ScrollView>

</layout>
