<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/selector_id_deck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
        <TextView
            android:id="@+id/cards_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_question"
            android:textSize="50sp"
            android:paddingBottom="50dp"
            android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_deck_hint"
                android:layout_marginHorizontal="50dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"/>

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/accept_edit_buttom"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_card_edit_button_title" />
        </LinearLayout>

    </RelativeLayout>

</layout>
